update method modifications and cancel button added

--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,8 @@
             <label for="read">Have you read it in entire ?</label>
             <input id="book-read" name="read" type="checkbox">
 
-            <input id="submit" class="submit" name="submit" value="submit" type="submit">
+            <input id="submit" class="submit" name="submit" value="Submit" type="submit">
+            <input id="cancel" class="cancel" name="cancel" value="Cancel" type="button">
         </form>
     </div>
 
@@ -77,7 +78,8 @@
             <label for="read">Have you read it in entire ?</label>
             <input id="edit-book-read" name="read" type="checkbox">
 
-            <input id="edit" class="edit" name="edit" value="edit" type="submit">
+            <input id="edit" class="edit" name="edit" value="Edit" type="submit">
+            <input id="edit-cancel" class="cancel" name="cancel" value="Cancel" type="button">
         </form>
     </div>
     <script src="../js/main.js" type="module"></script>
